discussion/kv_engine/147944/147944_rev20_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor]: Use folly::AsyncServerSocket for ServerSockets

Replace the old ServerSocket class with a new implementaion
which utilize folly::AsyncServerSocket

Change-Id: I520defc1deb345cb3c0fb3980e406f4781e34b32

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 14:48:10.000000000
Message: 
Patch Set 20: Patch Set 19 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 16:45:33.000000000
Message: 
Patch Set 20: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36794/ : FAILURE

Timeout of a CTest test 301/407 Test #301: memcached_testapp.default.TracingTest .........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36794/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9809/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9809/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9809/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8403/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/326/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11534/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11811/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19397/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10465/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11385/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
